kustomize/overlays/scots-lab/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: proxy
      port: 4180
      targetPort: 4180
