kustomize/overlays/scots-lab/apps/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: kgateway-http
      namespace: kgateway-system
  hostnames:
    - "home.srbii.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 4180
